--- a/smart-ja-web/package.json
+++ b/smart-ja-web/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "npm install --prefix server && cd server && npx prisma generate",
+    "start": "node server/server.js"
   },
   "dependencies": {
     "axios": "^1.6.2",
