fix: resolve zeabur deployment full-stack configuration and database initialization

--- a/smart-ja-web/Dockerfile
+++ b/smart-ja-web/Dockerfile
@@ -1,13 +1,31 @@
-# Frontend
-FROM node:18-alpine as build-stage
+FROM node:18-alpine
+
 WORKDIR /app
-COPY smart-ja-web/package*.json ./
+
+# Install native tools required for better-sqlite3 and Prisma
+RUN apk add --no-cache python3 make g++ sqlite
+
+# Copy package configurations
+COPY package*.json ./
+COPY server/package*.json ./server/
+COPY server/prisma/ ./server/prisma/
+
+# Install dependencies (will run postinstall script)
 RUN npm install
-COPY smart-ja-web/ .
+
+# Copy project files
+COPY . .
+
+# Build the frontend (dist)
 RUN npm run build
 
-# Production Stage
-FROM nginx:stable-alpine as production-stage
-COPY --from=build-stage /app/dist /usr/share/nginx/html
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+# Set environment
+ENV PORT=3002
+ENV NODE_ENV=production
+ENV DATABASE_URL="file:./dev.db"
+ENV JWT_SECRET="your_fallback_secret_for_production"
+
+EXPOSE 3002
+
+# Start the Node.js Express server
+CMD ["npm", "start"]
