feat: 全栈部署配置和脚本
详细内容:
1. Railway.app部署配置 (railway.json, Dockerfile.railway)
2. 生产环境Docker Compose配置 (docker-compose.prod.yml)
3. 前端生产Dockerfile (Dockerfile.prod + Nginx配置)
4. 一键部署脚本 (deploy.sh) 支持多平台
5. 完整环境变量模板 (.env.example)
6. 详细部署指南 (DEPLOYMENT.md)
7. Nginx反向代理配置 (nginx.conf)

部署平台支持:
✅ Railway.app (推荐) - 一键Docker Compose部署
✅ Render.com - 自动GitHub部署
✅ 本地Docker测试 - 完整生产环境模拟
✅ 传统VPS部署 - Docker Compose支持

架构优化:
- 多阶段Docker构建
- 健康检查配置
- 资源限制管理
- 安全头配置
- 静态文件缓存
- API代理路由

一键部署命令:
./deploy.sh local     # 本地测试
./deploy.sh railway   # Railway部署
./deploy.sh render    # Render部署

项目现在完全支持全栈云端部署！

--- a/.env.example
+++ b/.env.example
@@ -1,151 +1,69 @@
-# NS Smart Shopping 环境变量配置
+# NS Smart Shopping 全栈部署环境变量
 # 复制此文件为 .env 并填写实际值
-
-# ====================
-# 应用配置
-# ====================
-
-# 应用环境
-NODE_ENV=development
-
-# 服务器端口
-PORT=3000
-VITE_PORT=5173
-
-# 应用密钥 (用于JWT签名等)
-APP_SECRET=your_app_secret_here_change_in_production
 
 # ====================
 # 数据库配置
 # ====================
+DB_USER=postgres
+DB_PASSWORD=your_secure_password_here
+DB_NAME=smartja
+DB_HOST=db
+DB_PORT=5432
 
-# 开发环境使用SQLite
-DATABASE_URL="file:./dev.db"
-
-# 生产环境使用PostgreSQL
-# DATABASE_URL="postgresql://user:password@localhost:5432/ns_smart_shopping"
-
-# ====================
-# AI 服务配置
-# ====================
-
-# DeepSeek API (核心AI服务)
-DEEPSEEK_API_KEY=your_deepseek_api_key_here
-DEEPSEEK_API_URL=https://api.deepseek.com
-
-# ZeroClaw 配置 (可选)
-ZEROCLAW_URL=http://localhost:8080/v1/chat/completions
-ZEROCLAW_API_KEY=zc-local-dev-key
+# 生产环境数据库连接字符串
+DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
 
 # ====================
-# 文件上传配置
+# 后端API配置
 # ====================
+NODE_ENV=production
+PORT=3000
+JWT_SECRET=your_jwt_secret_key_change_in_production
+JWT_EXPIRES_IN=7d
 
-# 文件上传目录
-UPLOAD_DIR=./uploads
-MAX_FILE_SIZE=5242880  # 5MB in bytes
-
-# 允许的文件类型
-ALLOWED_FILE_TYPES=image/jpeg,image/png,image/webp,image/gif
-
-# ====================
-# 第三方服务配置
-# ====================
-
-# 社交媒体API (用于自动化推广)
-# DOUYIN_APP_KEY=your_douyin_app_key
-# DOUYIN_APP_SECRET=your_douyin_app_secret
-# BILIBILI_ACCESS_TOKEN=your_bilibili_token
-# XIAOHONGSHU_APP_ID=your_xiaohongshu_app_id
-
-# 邮件服务 (可选)
-# SMTP_HOST=smtp.gmail.com
-# SMTP_PORT=587
-# SMTP_USER=your_email@gmail.com
-# SMTP_PASS=your_email_password
+# AI服务配置
+GEMINI_API_KEY=your_gemini_api_key_here
 
 # ====================
-# 功能开关
+# 前端配置
 # ====================
-
-# AI功能开关
-AI_ENABLED=true
-AI_STREAMING=true
-
-# 社交媒体自动化开关
-SOCIAL_AUTO_POST=false
-SOCIAL_SCHEDULE_POST=true
-
-# 调试模式
-DEBUG=true
-LOG_LEVEL=debug
+VITE_API_URL=http://localhost:3000
+VITE_APP_NAME="NS Smart Shopping"
+VITE_APP_VERSION=1.0.0
 
 # ====================
 # 安全配置
 # ====================
+CORS_ORIGIN=http://localhost:5173,http://localhost:80
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX=100
 
-# CORS配置
-CORS_ORIGIN=http://localhost:5173,http://localhost:3000
+# ====================
+# 邮件服务 (可选)
+# ====================
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_USER=your_email@gmail.com
+# SMTP_PASS=your_app_password
+# EMAIL_FROM=noreply@smartja.com
 
-# 速率限制
-RATE_LIMIT_WINDOW=900000  # 15 minutes in milliseconds
-RATE_LIMIT_MAX=100        # 每个窗口最大请求数
-
-# JWT配置
-JWT_EXPIRES_IN=7d         # Token有效期
-JWT_REFRESH_EXPIRES_IN=30d # 刷新Token有效期
+# ====================
+# 文件上传 (可选)
+# ====================
+# UPLOAD_MAX_SIZE=10485760
+# UPLOAD_PATH=./uploads
 
 # ====================
 # 监控和日志
 # ====================
-
-# 日志级别
-LOG_LEVEL=info  # error, warn, info, debug
-
-# 日志文件位置
-LOG_DIR=./logs
-
-# 心跳检测间隔 (毫秒)
-HEARTBEAT_INTERVAL=900000  # 15分钟
+LOG_LEVEL=info
+LOG_FORMAT=combined
 
 # ====================
-# 开发专用配置
+# Railway/Render特定配置
 # ====================
+# Railway会自动注入DATABASE_URL
+# Render会自动注入DATABASE_URL
 
-# 开发模式下的模拟数据
-USE_MOCK_DATA=true
-MOCK_DELAY=500  # 模拟API延迟(毫秒)
-
-# 热重载配置
-VITE_HMR=true
-VITE_HMR_PORT=24678
-
-# ====================
-# 测试环境配置
-# ====================
-
-# 测试数据库
-TEST_DATABASE_URL="file:./test.db"
-
-# 测试模式
-TEST_MODE=false
-
-# ====================
-# 注意事项
-# ====================
-
-# 1. 生产环境必须修改所有默认值
-# 2. 敏感信息不要提交到版本控制
-# 3. 不同环境使用不同的 .env 文件
-# 4. 定期轮换密钥和密码
-
-# 环境变量优先级:
-# 1. 系统环境变量
-# 2. .env.local (不提交到版本控制)
-# 3. .env.development / .env.production
-# 4. .env
-
-# 创建不同环境的配置文件:
-# cp .env.example .env.development
-# cp .env.example .env.production
-# cp .env.example .env.test
+# 注意：生产环境务必修改所有密码和密钥！
+# 生成强密码：openssl rand -base64 32
